<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ceasar">

    <fragment
        android:id="@+id/navigation_ceasar"
        android:name="com.blackcat.cryptography.ui.ceasar.CeasarFragment"
        android:label="@string/ceasar"
        tools:layout="@layout/fragment_ceasar" />

    <fragment
        android:id="@+id/navigation_ma_hoan_vi"
        android:name="com.blackcat.cryptography.ui.ma_hoan_vi.MaHoanViFragment"
        android:label="@string/ma_hoan_vi"
        tools:layout="@layout/fragment_ma_hoan_vi" />

    <fragment
        android:id="@+id/navigation_affine"
        android:name="com.blackcat.cryptography.ui.affineCipher.AffineFragment"
        android:label="@string/affineCipher"
        tools:layout="@layout/fragment_affine" />

    <fragment
        android:id="@+id/navigation_vigenere"
        android:name="com.blackcat.cryptography.ui.vigenereCipher.VigenereFragment"
        android:label="@string/vigenereCipher"
        tools:layout="@layout/fragment_vigenere"/>

    <fragment
        android:id="@+id/navigation_hill"
        android:name="com.blackcat.cryptography.ui.hillCipher.HillFragment"
        android:label="@string/hillCipher"
        tools:layout="@layout/fragment_hill"/>
</navigation>