<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ceasar.CeasarFragment">

    <LinearLayout
        android:id="@+id/section_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/key"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_key_from_input"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:text="@string/set_key_input"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_key_from_file"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:text="@string/set_key_file"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/section_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/section_1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/encrypt_ceasar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:text="@string/encrypt"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/decrypt_ceasar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:text="@string/decrypt"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>